# entity-resolution-engine

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
scripts/: seed_db.py
src/entity_resolution/: __init__.py  main.py
src/entity_resolution/api/: middleware.py  schemas.py
src/entity_resolution/api/routers/: batch.py  entity.py  health.py  match.py  search.py
src/entity_resolution/batch/: __init__.py  manager.py
src/entity_resolution/core/: config.py  dependencies.py  logging.py
src/entity_resolution/db/: database.py  models.py  queries.py  query_builder.py  schema.sql
src/entity_resolution/entity_types/: __init__.py  company.py  config.py
src/entity_resolution/matching/: __init__.py  base.py  ensemble.py  jaro_winkler.py  levenshtein.py  phonetic_match.py  registry.py  token_sort.py
src/entity_resolution/normalization/: __init__.py  language.py  normalizer.py  phonetic.py  transliterator.py
src/entity_resolution/pipeline/: __init__.py  blocker.py  explainer.py  pipeline.py
src/entity_resolution/static/: index.html
tests/: conftest.py  test_api.py  test_blocker.py  test_normalizer.py  test_pipeline.py  test_strategies.py  test_transliterator.py
