[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "entity-resolution-engine"
version = "0.1.0"
description = "Cross-language entity resolution engine with pluggable entity types"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "rapidfuzz>=3.6.0",
    "pykakasi>=2.2.1",
    "langdetect>=1.0.9",
    "aiosqlite>=0.19.0",
    "pydantic-settings>=2.1.0",
    "structlog>=24.1.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
    "mypy>=1.9.0",
    "pre-commit>=3.6.0",
]

[project.scripts]
entity-resolution = "entity_resolution.main:run"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 99
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "S",    # flake8-bandit (security)
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific
]
ignore = [
    "S101",   # assert in tests
    "B008",   # Depends() in defaults (FastAPI pattern)
    "S104",   # binding to 0.0.0.0 (configurable)
    "S608",   # SQL injection (query builder uses trusted config, not user input)
    "RUF003", # ambiguous unicode in comments (fullwidth chars are intentional)
    "RUF006", # asyncio.create_task without ref (fire-and-forget pattern)
    "RUF012", # mutable class attribute defaults (used as constants)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "S106"]
"scripts/*" = ["T20"]

[tool.ruff.lint.isort]
known-first-party = ["entity_resolution"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
packages = ["entity_resolution"]
mypy_path = "src"

[[tool.mypy.overrides]]
module = ["rapidfuzz.*", "pykakasi.*", "langdetect.*", "aiosqlite.*"]
ignore_missing_imports = true

[tool.coverage.run]
source = ["entity_resolution"]

[tool.coverage.report]
show_missing = true
fail_under = 70
